# facebook-feed-scraper

./: .gitignore  README.md  pyproject.toml  tester.py
src/facebook_feed_scraper/: __init__.py
src/facebook_feed_scraper/browser/: __init__.py  browser.py  exceptions.py
